# ASI

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: default.yaml  models.yaml  prompts.yaml  safety.yaml  tools.yaml
src/asi/: __init__.py  config.py
src/asi/brain/: arabella_brain.py  protocol.py  react_loop.py
src/asi/emotion/: emotion_state.py
src/asi/interfaces/: api.py  cli.py
src/asi/llm/: backend.py  factory.py  null_backend.py
src/asi/memory/: embedder.py  store.py  store_memory.py  store_sqlite.py  vector_index.py
src/asi/observability/: ids.py  logger.py
src/asi/persona/: persona_manager.py
src/asi/safety/: __init__.py  guardrails.py  paths.py  permissions.py  redact.py  sandbox.py
src/asi/tools/: base.py  echo_tool.py  files_tool.py  registry.py  shell_tool.py
src/asi/training/: placeholder.py
tests/: test_api.py  test_brain_respond.py  test_config_loader.py  test_embedder_hash.py  test_files_tool_security.py  test_memory_sqlite_persistence.py  test_observability_logger.py  test_permissions.py  test_protocol_parse.py  test_react_loop.py  test_sandbox_security.py  test_seams.py
