[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asi"
version = "0.1.0"
description = "ASI scaffold bootstrap"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
  "ruff>=0.9.0",
  "mypy>=1.11.0",
  "pytest>=8.3.0",
  "pre-commit>=4.0.0",
]
api = []
train = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["asi*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
mypy_path = ["src"]
packages = ["asi"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
