[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asi"
version = "0.1.0"
description = "ASI scaffold bootstrap"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.9.0",
  "mypy>=1.11.0",
  "pytest>=8.3.0",
  "pre-commit>=4.0.0",
]
memory = [
  "hnswlib>=0.7.0",
]
api = [
  "fastapi>=0.110.0",
  "uvicorn>=0.27.0",
]
train = [
  "torch>=2.2.0",
  "transformers>=4.40.0",
  "peft>=0.10.0",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["asi*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
mypy_path = ["src"]
packages = ["asi"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

